--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -45,6 +45,9 @@
     <property name="focusPolicy">
      <enum>Qt::NoFocus</enum>
     </property>
+    <property name="contextMenuPolicy">
+     <enum>Qt::CustomContextMenu</enum>
+    </property>
     <property name="autoFillBackground">
      <bool>false</bool>
     </property>
@@ -109,9 +112,9 @@ color: rgb(255, 255, 255);
     <widget class="QFrame" name="frWareHouse">
      <property name="geometry">
       <rect>
-       <x>50</x>
+       <x>60</x>
        <y>130</y>
-       <width>111</width>
+       <width>101</width>
        <height>101</height>
       </rect>
      </property>
@@ -130,9 +133,12 @@ background-color: rgb(64, 75, 105);</string>
        <rect>
         <x>10</x>
         <y>10</y>
-        <width>91</width>
+        <width>81</width>
         <height>81</height>
        </rect>
+      </property>
+      <property name="cursor">
+       <cursorShape>PointingHandCursor</cursorShape>
       </property>
       <property name="styleSheet">
        <string notr="true">border-image: url(:/imgs/images/small.svg) 0 0 0 0 stretch stretch;</string>
@@ -145,10 +151,10 @@ background-color: rgb(64, 75, 105);</string>
     <widget class="QFrame" name="frPlanner">
      <property name="geometry">
       <rect>
-       <x>50</x>
-       <y>310</y>
-       <width>111</width>
-       <height>101</height>
+       <x>60</x>
+       <y>260</y>
+       <width>71</width>
+       <height>71</height>
       </rect>
      </property>
      <property name="styleSheet">
@@ -164,11 +170,14 @@ background-color: rgb(64, 75, 105);</string>
      <widget class="QPushButton" name="pushButton">
       <property name="geometry">
        <rect>
-        <x>20</x>
+        <x>10</x>
         <y>10</y>
-        <width>71</width>
-        <height>71</height>
+        <width>51</width>
+        <height>51</height>
        </rect>
+      </property>
+      <property name="cursor">
+       <cursorShape>PointingHandCursor</cursorShape>
       </property>
       <property name="styleSheet">
        <string notr="true">border-image: url(:/imgs/images/construction-and-tools.svg) 0 0 0 0 stretch;</string>
@@ -181,9 +190,9 @@ background-color: rgb(64, 75, 105);</string>
     <widget class="QFrame" name="frMixer1">
      <property name="geometry">
       <rect>
-       <x>260</x>
+       <x>270</x>
        <y>50</y>
-       <width>91</width>
+       <width>81</width>
        <height>81</height>
       </rect>
      </property>
@@ -206,6 +215,9 @@ background-color: rgb(64, 75, 105);</string>
         <height>61</height>
        </rect>
       </property>
+      <property name="cursor">
+       <cursorShape>PointingHandCursor</cursorShape>
+      </property>
       <property name="styleSheet">
        <string notr="true">border-image: url(:/imgs/images/mixer-blender2.svg)  0 0 0 0 stretch;</string>
       </property>
@@ -217,9 +229,9 @@ background-color: rgb(64, 75, 105);</string>
     <widget class="QFrame" name="frMixer2">
      <property name="geometry">
       <rect>
-       <x>260</x>
+       <x>270</x>
        <y>160</y>
-       <width>91</width>
+       <width>81</width>
        <height>81</height>
       </rect>
      </property>
@@ -242,6 +254,9 @@ background-color: rgb(64, 75, 105);</string>
         <height>61</height>
        </rect>
       </property>
+      <property name="cursor">
+       <cursorShape>PointingHandCursor</cursorShape>
+      </property>
       <property name="styleSheet">
        <string notr="true">border-image: url(:/imgs/images/mixer-blender2.svg)  0 0 0 0 stretch;</string>
       </property>
@@ -253,10 +268,10 @@ background-color: rgb(64, 75, 105);</string>
     <widget class="QFrame" name="frChocolateMixer">
      <property name="geometry">
       <rect>
-       <x>260</x>
-       <y>270</y>
-       <width>91</width>
-       <height>81</height>
+       <x>270</x>
+       <y>260</y>
+       <width>71</width>
+       <height>71</height>
       </rect>
      </property>
      <property name="styleSheet">
@@ -272,11 +287,14 @@ background-color: rgb(64, 75, 105);</string>
      <widget class="QPushButton" name="pushButton_4">
       <property name="geometry">
        <rect>
-        <x>20</x>
-        <y>20</y>
+        <x>10</x>
+        <y>10</y>
         <width>51</width>
         <height>51</height>
        </rect>
+      </property>
+      <property name="cursor">
+       <cursorShape>PointingHandCursor</cursorShape>
       </property>
       <property name="styleSheet">
        <string notr="true">border-image: url(:/imgs/images/mixer-blender.svg)  0 0 0 0 stretch;</string>
@@ -395,10 +413,10 @@ background-color: rgb(64, 75, 105);</string>
     <widget class="QFrame" name="frAssembly">
      <property name="geometry">
       <rect>
-       <x>420</x>
-       <y>150</y>
-       <width>101</width>
-       <height>101</height>
+       <x>430</x>
+       <y>160</y>
+       <width>91</width>
+       <height>91</height>
       </rect>
      </property>
      <property name="styleSheet">
@@ -416,9 +434,12 @@ background-color: rgb(64, 75, 105);</string>
        <rect>
         <x>10</x>
         <y>10</y>
-        <width>81</width>
-        <height>81</height>
+        <width>71</width>
+        <height>71</height>
        </rect>
+      </property>
+      <property name="cursor">
+       <cursorShape>PointingHandCursor</cursorShape>
       </property>
       <property name="styleSheet">
        <string notr="true">border-image: url(:/imgs/images/conveyor.svg)  0 0 0 0 stretch;</string>
@@ -456,6 +477,9 @@ background-color: rgb(64, 75, 105);</string>
         <height>51</height>
        </rect>
       </property>
+      <property name="cursor">
+       <cursorShape>PointingHandCursor</cursorShape>
+      </property>
       <property name="styleSheet">
        <string notr="true">border-image: url(:/imgs/images/oven.svg)  0 0 0 0 stretch;</string>
       </property>
@@ -492,6 +516,9 @@ background-color: rgb(64, 75, 105);</string>
         <height>51</height>
        </rect>
       </property>
+      <property name="cursor">
+       <cursorShape>PointingHandCursor</cursorShape>
+      </property>
       <property name="styleSheet">
        <string notr="true">border-image: url(:/imgs/images/delivery-box.svg)  0 0 0 0 stretch;</string>
       </property>
@@ -504,7 +531,7 @@ background-color: rgb(64, 75, 105);</string>
      <property name="geometry">
       <rect>
        <x>700</x>
-       <y>270</y>
+       <y>290</y>
        <width>81</width>
        <height>81</height>
       </rect>
@@ -527,6 +554,9 @@ background-color: rgb(64, 75, 105);</string>
         <width>61</width>
         <height>61</height>
        </rect>
+      </property>
+      <property name="cursor">
+       <cursorShape>PointingHandCursor</cursorShape>
       </property>
       <property name="styleSheet">
        <string notr="true">border-image: url(:/imgs/images/small.svg)  0 0 0 0 stretch;;</string>
@@ -555,6 +585,144 @@ background-color: rgb(64, 75, 105);</string>
       <enum>QFrame::Raised</enum>
      </property>
     </widget>
+    <widget class="QLabel" name="label_2">
+     <property name="geometry">
+      <rect>
+       <x>130</x>
+       <y>70</y>
+       <width>151</width>
+       <height>241</height>
+      </rect>
+     </property>
+     <property name="styleSheet">
+      <string notr="true">border-image: url(:/imgs/images/warehouse-queue.svg) 0 0 0 0 stretch stretch;</string>
+     </property>
+     <property name="text">
+      <string/>
+     </property>
+    </widget>
+    <widget class="QLabel" name="label_3">
+     <property name="geometry">
+      <rect>
+       <x>180</x>
+       <y>140</y>
+       <width>51</width>
+       <height>51</height>
+      </rect>
+     </property>
+     <property name="cursor">
+      <cursorShape>PointingHandCursor</cursorShape>
+     </property>
+     <property name="styleSheet">
+      <string notr="true">background-color: transparent;
+border-image: url(:/imgs/images/trolley.svg) 0 0 0 0 stretch stretch;</string>
+     </property>
+     <property name="text">
+      <string/>
+     </property>
+    </widget>
+    <widget class="QLabel" name="lbChocolateQueue">
+     <property name="geometry">
+      <rect>
+       <x>330</x>
+       <y>80</y>
+       <width>161</width>
+       <height>141</height>
+      </rect>
+     </property>
+     <property name="styleSheet">
+      <string notr="true">border-image: url(:/imgs/images/OvenQueue/oven-queue.svg) 0 0 0 0 stretch stretch;
+
+</string>
+     </property>
+     <property name="text">
+      <string/>
+     </property>
+    </widget>
+    <widget class="QLabel" name="label_5">
+     <property name="geometry">
+      <rect>
+       <x>340</x>
+       <y>190</y>
+       <width>141</width>
+       <height>121</height>
+      </rect>
+     </property>
+     <property name="styleSheet">
+      <string notr="true">border-image: url(:/imgs/images/oven-queue-2.svg) 0 0 0 0 stretch stretch;</string>
+     </property>
+     <property name="text">
+      <string/>
+     </property>
+    </widget>
+    <widget class="QLabel" name="label_6">
+     <property name="geometry">
+      <rect>
+       <x>470</x>
+       <y>190</y>
+       <width>141</width>
+       <height>31</height>
+      </rect>
+     </property>
+     <property name="styleSheet">
+      <string notr="true">background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:1, y2:0, stop:0 rgba(0, 199, 213, 255), stop:1 rgba(0, 120, 128, 255));</string>
+     </property>
+     <property name="text">
+      <string/>
+     </property>
+    </widget>
+    <widget class="QLabel" name="label_7">
+     <property name="geometry">
+      <rect>
+       <x>620</x>
+       <y>190</y>
+       <width>141</width>
+       <height>31</height>
+      </rect>
+     </property>
+     <property name="styleSheet">
+      <string notr="true">background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:1, y2:0, stop:0 rgba(0, 199, 213, 255), stop:1 rgba(0, 120, 128, 255));</string>
+     </property>
+     <property name="text">
+      <string/>
+     </property>
+    </widget>
+    <widget class="QLabel" name="label_8">
+     <property name="geometry">
+      <rect>
+       <x>720</x>
+       <y>210</y>
+       <width>31</width>
+       <height>91</height>
+      </rect>
+     </property>
+     <property name="styleSheet">
+      <string notr="true">background-color: qlineargradient(spread:pad, x1:0, y1:1, x2:0, y2:0, stop:0 rgba(0, 199, 213, 255), stop:1 rgba(0, 120, 128, 255));</string>
+     </property>
+     <property name="text">
+      <string/>
+     </property>
+    </widget>
+    <zorder>label_8</zorder>
+    <zorder>label_7</zorder>
+    <zorder>label_6</zorder>
+    <zorder>label_5</zorder>
+    <zorder>lbChocolateQueue</zorder>
+    <zorder>label_2</zorder>
+    <zorder>frHeader</zorder>
+    <zorder>frWareHouse</zorder>
+    <zorder>frPlanner</zorder>
+    <zorder>frMixer1</zorder>
+    <zorder>frMixer2</zorder>
+    <zorder>frChocolateMixer</zorder>
+    <zorder>frChocolateMixer_2</zorder>
+    <zorder>frChocolateMixer_3</zorder>
+    <zorder>frAssembly</zorder>
+    <zorder>frOven</zorder>
+    <zorder>frBaler</zorder>
+    <zorder>frDelivery</zorder>
+    <zorder>frStatusContainer</zorder>
+    <zorder>label_3</zorder>
    </widget>
   </widget>
   <widget class="QMenuBar" name="menubar">
