--- a/view/mainwindow.ui
+++ b/view/mainwindow.ui
@@ -507,7 +507,7 @@ background-color: rgb(64, 75, 105);</string>
      <property name="frameShadow">
       <enum>QFrame::Raised</enum>
      </property>
-     <widget class="QPushButton" name="pushButton_7">
+     <widget class="QPushButton" name="btnPacker">
       <property name="geometry">
        <rect>
         <x>20</x>
@@ -886,7 +886,7 @@ color: rgb(0, 0, 0);</string>
         <cursorShape>PointingHandCursor</cursorShape>
        </property>
        <property name="autoFillBackground">
-        <bool>true</bool>
+        <bool>false</bool>
        </property>
        <property name="styleSheet">
         <string notr="true">background-color: rgb(40, 49, 73);
@@ -918,7 +918,7 @@ selection-color: rgb(40, 49, 73);</string>
         <cursorShape>PointingHandCursor</cursorShape>
        </property>
        <property name="autoFillBackground">
-        <bool>true</bool>
+        <bool>false</bool>
        </property>
        <property name="styleSheet">
         <string notr="true">background-color: rgb(40, 49, 73);</string>
@@ -1029,7 +1029,7 @@ color: rgb(0, 0, 0);</string>
         <cursorShape>PointingHandCursor</cursorShape>
        </property>
        <property name="autoFillBackground">
-        <bool>true</bool>
+        <bool>false</bool>
        </property>
        <property name="styleSheet">
         <string notr="true">background-color: rgb(40, 49, 73);</string>
@@ -1127,7 +1127,7 @@ background-color: rgb(255, 255, 255);</string>
         <cursorShape>PointingHandCursor</cursorShape>
        </property>
        <property name="autoFillBackground">
-        <bool>true</bool>
+        <bool>false</bool>
        </property>
        <property name="styleSheet">
         <string notr="true">background-color: rgb(40, 49, 73);</string>
@@ -1158,7 +1158,7 @@ background-color: rgb(255, 255, 255);</string>
         <cursorShape>PointingHandCursor</cursorShape>
        </property>
        <property name="autoFillBackground">
-        <bool>true</bool>
+        <bool>false</bool>
        </property>
        <property name="styleSheet">
         <string notr="true">background-color: rgb(40, 49, 73);</string>
@@ -1471,25 +1471,6 @@ color: rgb(0, 0, 0);</string>
         <string>Tiempo produccion...</string>
        </property>
       </widget>
-      <widget class="QPlainTextEdit" name="plainTextEdit_7">
-       <property name="geometry">
-        <rect>
-         <x>190</x>
-         <y>310</y>
-         <width>151</width>
-         <height>141</height>
-        </rect>
-       </property>
-       <property name="autoFillBackground">
-        <bool>true</bool>
-       </property>
-       <property name="styleSheet">
-        <string notr="true">background-color: rgb(255, 255, 255);</string>
-       </property>
-       <property name="readOnly">
-        <bool>true</bool>
-       </property>
-      </widget>
       <widget class="QLabel" name="label_55">
        <property name="geometry">
         <rect>
@@ -1676,7 +1657,7 @@ color: rgb(0, 0, 0);</string>
         <string>Capacidad Max:</string>
        </property>
       </widget>
-      <widget class="QPlainTextEdit" name="plainTextEdit_6">
+      <widget class="QPlainTextEdit" name="teCM1Pending">
        <property name="geometry">
         <rect>
          <x>20</x>
@@ -1778,54 +1759,11 @@ color: rgb(0, 0, 0);</string>
         <string>Produccion</string>
        </property>
       </widget>
-      <widget class="QPlainTextEdit" name="teCM2Pending">
-       <property name="geometry">
-        <rect>
-         <x>180</x>
-         <y>210</y>
-         <width>141</width>
-         <height>31</height>
-        </rect>
-       </property>
-       <property name="cursor">
-        <cursorShape>PointingHandCursor</cursorShape>
-       </property>
-       <property name="autoFillBackground">
-        <bool>false</bool>
-       </property>
-       <property name="styleSheet">
-        <string notr="true">background-color: rgb(255, 255, 255);
-color: rgb(0, 0, 0);</string>
-       </property>
-       <property name="readOnly">
-        <bool>true</bool>
-       </property>
-      </widget>
-      <widget class="QLabel" name="label_34">
+      <widget class="QPlainTextEdit" name="teCM1Processed">
        <property name="geometry">
         <rect>
          <x>190</x>
-         <y>260</y>
-         <width>141</width>
-         <height>21</height>
-        </rect>
-       </property>
-       <property name="font">
-        <font>
-         <pointsize>10</pointsize>
-         <weight>50</weight>
-         <bold>false</bold>
-        </font>
-       </property>
-       <property name="text">
-        <string>Peticiones procesadas:</string>
-       </property>
-      </widget>
-      <widget class="QPlainTextEdit" name="teCM2Processed">
-       <property name="geometry">
-        <rect>
-         <x>190</x>
-         <y>300</y>
+         <y>310</y>
          <width>151</width>
          <height>141</height>
         </rect>
@@ -1845,7 +1783,7 @@ color: rgb(0, 0, 0);</string>
        <property name="geometry">
         <rect>
          <x>180</x>
-         <y>200</y>
+         <y>210</y>
          <width>141</width>
          <height>31</height>
         </rect>
@@ -2261,26 +2199,6 @@ selection-color: rgb(40, 49, 73);</string>
         <string>Mezcladora Chocolate #2</string>
        </property>
       </widget>
-      <widget class="QPlainTextEdit" name="teCM1Processed">
-       <property name="geometry">
-        <rect>
-         <x>20</x>
-         <y>50</y>
-         <width>111</width>
-         <height>21</height>
-        </rect>
-       </property>
-       <property name="autoFillBackground">
-        <bool>true</bool>
-       </property>
-       <property name="styleSheet">
-        <string notr="true">background-color: rgb(255, 255, 255);
-color: rgb(0, 0, 0);</string>
-       </property>
-       <property name="text">
-        <string>Capacidades</string>
-       </property>
-      </widget>
       <widget class="QLabel" name="label_27">
        <property name="geometry">
         <rect>
@@ -2513,26 +2431,6 @@ color: rgb(0, 0, 0);</string>
         <string>Peticiones pendientes:</string>
        </property>
       </widget>
-      <widget class="QPlainTextEdit" name="teCM1Pending">
-       <property name="geometry">
-        <rect>
-         <x>20</x>
-         <y>300</y>
-         <width>151</width>
-         <height>141</height>
-        </rect>
-       </property>
-       <property name="autoFillBackground">
-        <bool>true</bool>
-       </property>
-       <property name="styleSheet">
-        <string notr="true">background-color: rgb(255, 255, 255);
-color: rgb(0, 0, 0);</string>
-       </property>
-       <property name="readOnly">
-        <bool>true</bool>
-       </property>
-      </widget>
       <widget class="QLabel" name="label_34">
        <property name="geometry">
         <rect>
@@ -2551,25 +2449,6 @@ color: rgb(0, 0, 0);</string>
        </property>
        <property name="text">
         <string>Peticiones procesadas:</string>
-       </property>
-      </widget>
-      <widget class="QPlainTextEdit" name="plainTextEdit_3">
-       <property name="geometry">
-        <rect>
-         <x>190</x>
-         <y>300</y>
-         <width>151</width>
-         <height>141</height>
-        </rect>
-       </property>
-       <property name="autoFillBackground">
-        <bool>true</bool>
-       </property>
-       <property name="styleSheet">
-        <string notr="true">background-color: rgb(255, 255, 255);</string>
-       </property>
-       <property name="readOnly">
-        <bool>true</bool>
        </property>
       </widget>
       <widget class="QPushButton" name="btnCM2Apply">
@@ -2601,6 +2480,52 @@ selection-color: rgb(40, 49, 73);</string>
         <bool>true</bool>
        </property>
        <property name="flat">
+        <bool>true</bool>
+       </property>
+      </widget>
+      <widget class="QPlainTextEdit" name="teCM2Pending">
+       <property name="geometry">
+        <rect>
+         <x>20</x>
+         <y>290</y>
+         <width>141</width>
+         <height>151</height>
+        </rect>
+       </property>
+       <property name="cursor" stdset="0">
+        <cursorShape>PointingHandCursor</cursorShape>
+       </property>
+       <property name="autoFillBackground">
+        <bool>false</bool>
+       </property>
+       <property name="styleSheet">
+        <string notr="true">background-color: rgb(255, 255, 255);
+color: rgb(0, 0, 0);</string>
+       </property>
+       <property name="readOnly">
+        <bool>true</bool>
+       </property>
+      </widget>
+      <widget class="QPlainTextEdit" name="teCM2Processed">
+       <property name="geometry">
+        <rect>
+         <x>190</x>
+         <y>290</y>
+         <width>141</width>
+         <height>151</height>
+        </rect>
+       </property>
+       <property name="cursor" stdset="0">
+        <cursorShape>PointingHandCursor</cursorShape>
+       </property>
+       <property name="autoFillBackground">
+        <bool>false</bool>
+       </property>
+       <property name="styleSheet">
+        <string notr="true">background-color: rgb(255, 255, 255);
+color: rgb(0, 0, 0);</string>
+       </property>
+       <property name="readOnly">
         <bool>true</bool>
        </property>
       </widget>
@@ -3013,7 +2938,7 @@ selection-color: rgb(40, 49, 73);</string>
         <string>Tiempo</string>
        </property>
       </widget>
-      <widget class="QLineEdit" name="leWHDelay_2">
+      <widget class="QLineEdit" name="leOvenBand1Delay">
        <property name="geometry">
         <rect>
          <x>190</x>
@@ -3059,7 +2984,7 @@ color: rgb(0, 0, 0);</string>
         <string>Capacidades</string>
        </property>
       </widget>
-      <widget class="QLineEdit" name="lePlannerAmount_3">
+      <widget class="QLineEdit" name="leOvenBand1">
        <property name="geometry">
         <rect>
          <x>60</x>
@@ -3082,7 +3007,7 @@ color: rgb(0, 0, 0);</string>
         <string>Cantidad</string>
        </property>
       </widget>
-      <widget class="QPushButton" name="btnCM2Apply_2">
+      <widget class="QPushButton" name="btnOvenApply">
        <property name="geometry">
         <rect>
          <x>90</x>
@@ -3095,7 +3020,7 @@ color: rgb(0, 0, 0);</string>
         <cursorShape>PointingHandCursor</cursorShape>
        </property>
        <property name="autoFillBackground">
-        <bool>true</bool>
+        <bool>false</bool>
        </property>
        <property name="styleSheet">
         <string notr="true">background-color: rgb(41, 49, 73);
@@ -3154,7 +3079,7 @@ selection-color: rgb(42, 49, 73);</string>
         <string>Duracion del horneado</string>
        </property>
       </widget>
-      <widget class="QLineEdit" name="lePlannerAmount_8">
+      <widget class="QLineEdit" name="leOvenBand2">
        <property name="geometry">
         <rect>
          <x>60</x>
@@ -3177,7 +3102,7 @@ color: rgb(0, 0, 0);</string>
         <string>Cantidad</string>
        </property>
       </widget>
-      <widget class="QLineEdit" name="lePlannerAmount_9">
+      <widget class="QLineEdit" name="leOvenBand3">
        <property name="geometry">
         <rect>
          <x>60</x>
@@ -3200,7 +3125,7 @@ color: rgb(0, 0, 0);</string>
         <string>Cantidad</string>
        </property>
       </widget>
-      <widget class="QLineEdit" name="lePlannerAmount_10">
+      <widget class="QLineEdit" name="leOvenBand4">
        <property name="geometry">
         <rect>
          <x>60</x>
@@ -3223,7 +3148,7 @@ color: rgb(0, 0, 0);</string>
         <string>Cantidad</string>
        </property>
       </widget>
-      <widget class="QLineEdit" name="lePlannerAmount_11">
+      <widget class="QLineEdit" name="leOvenBand5">
        <property name="geometry">
         <rect>
          <x>60</x>
@@ -3246,7 +3171,7 @@ color: rgb(0, 0, 0);</string>
         <string>Cantidad</string>
        </property>
       </widget>
-      <widget class="QLineEdit" name="lePlannerAmount_12">
+      <widget class="QLineEdit" name="leOvenBand6">
        <property name="geometry">
         <rect>
          <x>60</x>
@@ -3269,7 +3194,7 @@ color: rgb(0, 0, 0);</string>
         <string>Cantidad</string>
        </property>
       </widget>
-      <widget class="QLineEdit" name="leWHDelay_3">
+      <widget class="QLineEdit" name="leOvenBand2Delay">
        <property name="geometry">
         <rect>
          <x>190</x>
@@ -3295,7 +3220,7 @@ color: rgb(0, 0, 0);</string>
         <string>segundos...</string>
        </property>
       </widget>
-      <widget class="QLineEdit" name="leWHDelay_4">
+      <widget class="QLineEdit" name="leOvenBand3Delay">
        <property name="geometry">
         <rect>
          <x>190</x>
@@ -3321,7 +3246,7 @@ color: rgb(0, 0, 0);</string>
         <string>segundos...</string>
        </property>
       </widget>
-      <widget class="QLineEdit" name="leWHDelay_5">
+      <widget class="QLineEdit" name="leOvenBand4Delay">
        <property name="geometry">
         <rect>
          <x>190</x>
@@ -3347,7 +3272,7 @@ color: rgb(0, 0, 0);</string>
         <string>segundos...</string>
        </property>
       </widget>
-      <widget class="QLineEdit" name="leWHDelay_6">
+      <widget class="QLineEdit" name="leOvenBand5Delay">
        <property name="geometry">
         <rect>
          <x>190</x>
@@ -3373,7 +3298,7 @@ color: rgb(0, 0, 0);</string>
         <string>segundos...</string>
        </property>
       </widget>
-      <widget class="QLineEdit" name="leWHDelay_7">
+      <widget class="QLineEdit" name="leOvenBand6Delay">
        <property name="geometry">
         <rect>
          <x>190</x>
@@ -3541,7 +3466,7 @@ color: rgb(0, 0, 0);</string>
         <string> Empacadora y Transporte</string>
        </property>
       </widget>
-      <widget class="QLineEdit" name="lePlannerAmount_4">
+      <widget class="QLineEdit" name="lePackerDelay">
        <property name="geometry">
         <rect>
          <x>20</x>
@@ -3584,7 +3509,7 @@ color: rgb(0, 0, 0);</string>
         <string>Tiempos</string>
        </property>
       </widget>
-      <widget class="QLineEdit" name="lePlannerAmount_5">
+      <widget class="QLineEdit" name="lePackerSendDelay">
        <property name="geometry">
         <rect>
          <x>20</x>
@@ -3687,7 +3612,7 @@ color: rgb(0, 0, 0);</string>
         <string>Capacidad de empaque por paquete</string>
        </property>
       </widget>
-      <widget class="QLineEdit" name="lePlannerAmount_6">
+      <widget class="QLineEdit" name="lePackerCapacity">
        <property name="geometry">
         <rect>
          <x>20</x>
@@ -3710,7 +3635,7 @@ color: rgb(0, 0, 0);</string>
         <string>Cantidad..</string>
        </property>
       </widget>
-      <widget class="QLineEdit" name="lePlannerAmount_7">
+      <widget class="QLineEdit" name="lePackerPacks">
        <property name="geometry">
         <rect>
          <x>20</x>
@@ -3753,7 +3678,7 @@ color: rgb(0, 0, 0);</string>
         <string>Capacidad de paquetes por transporte</string>
        </property>
       </widget>
-      <widget class="QPushButton" name="btnCM2Apply_3">
+      <widget class="QPushButton" name="btnPackerApply">
        <property name="geometry">
         <rect>
          <x>80</x>
@@ -3766,7 +3691,7 @@ color: rgb(0, 0, 0);</string>
         <cursorShape>PointingHandCursor</cursorShape>
        </property>
        <property name="autoFillBackground">
-        <bool>true</bool>
+        <bool>false</bool>
        </property>
        <property name="styleSheet">
         <string notr="true">background-color: rgb(40, 49, 73);
@@ -3877,7 +3802,7 @@ border-radius: 10px;
      <x>0</x>
      <y>0</y>
      <width>1000</width>
-     <height>25</height>
+     <height>20</height>
     </rect>
    </property>
   </widget>
