--- a/view/mainwindow.ui
+++ b/view/mainwindow.ui
@@ -681,7 +681,7 @@ border-image: url(:/imgs/images/trolley.svg) 0 0 0 0 stretch stretch;</string>
       <string notr="true">background-color: rgb(53, 62, 86);</string>
      </property>
      <property name="currentIndex">
-      <number>2</number>
+      <number>5</number>
      </property>
      <widget class="QWidget" name="planner_page">
       <widget class="QLabel" name="label_4">
@@ -2660,12 +2660,12 @@ color: rgb(0, 0, 0);</string>
         <string>Cantidad por tiempo...</string>
        </property>
       </widget>
-      <widget class="QLabel" name="label_61">
+      <widget class="QLabel" name="lbAsmChocolate">
        <property name="geometry">
         <rect>
          <x>20</x>
          <y>270</y>
-         <width>131</width>
+         <width>311</width>
          <height>21</height>
         </rect>
        </property>
@@ -2720,31 +2720,12 @@ color: rgb(0, 0, 0);</string>
         <string>Galletas ensambladas:</string>
        </property>
       </widget>
-      <widget class="QPlainTextEdit" name="plainTextEdit_8">
+      <widget class="QLabel" name="lbAsmDough">
        <property name="geometry">
         <rect>
          <x>20</x>
          <y>300</y>
-         <width>151</width>
-         <height>141</height>
-        </rect>
-       </property>
-       <property name="autoFillBackground">
-        <bool>true</bool>
-       </property>
-       <property name="styleSheet">
-        <string notr="true">background-color: rgb(255, 255, 255);</string>
-       </property>
-       <property name="readOnly">
-        <bool>true</bool>
-       </property>
-      </widget>
-      <widget class="QLabel" name="label_64">
-       <property name="geometry">
-        <rect>
-         <x>190</x>
-         <y>270</y>
-         <width>131</width>
+         <width>311</width>
          <height>21</height>
         </rect>
        </property>
@@ -2757,25 +2738,6 @@ color: rgb(0, 0, 0);</string>
        </property>
        <property name="text">
         <string>Banda masa:</string>
-       </property>
-      </widget>
-      <widget class="QPlainTextEdit" name="plainTextEdit_9">
-       <property name="geometry">
-        <rect>
-         <x>190</x>
-         <y>300</y>
-         <width>151</width>
-         <height>141</height>
-        </rect>
-       </property>
-       <property name="autoFillBackground">
-        <bool>true</bool>
-       </property>
-       <property name="styleSheet">
-        <string notr="true">background-color: rgb(255, 255, 255);</string>
-       </property>
-       <property name="readOnly">
-        <bool>true</bool>
        </property>
       </widget>
       <widget class="QLabel" name="label_65">
